# autoresearch

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mise.toml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml
docs/: sweep_runner_design.md
examples/: milestones.errorbars.example.yaml  milestones.example.yaml  milestones.stacked.example.yaml
src/autoresearch/: __init__.py  charts.py  compare.py  current_run.py  files.py  gpu_monitor.py  introspect.py  introspect_cli.py  normalization.py  pr_updater.py  prompt_caching.py  render.py  report.py  results.py  retrospective.py  retry_utils.py  subprocess_utils.py  sweep_runner.py  token_confidence.py  trajectory.py  verdict.py  wandb_history.py
tests/: test_compare.py  test_current_run.py  test_files.py  test_gpu_monitor.py  test_introspect.py  test_normalization.py  test_prompt_caching.py  test_results.py  test_retrospective.py  test_retry_utils.py  test_subprocess_utils.py  test_sweep_helpers.py  test_sweep_runner.py  test_token_confidence.py  test_trajectory.py  test_verdict.py  test_wandb_history.py
