[project]
name = "autoresearch"
version = "0.0.1"
description = "Self-driving experiment sweep loop — daemon-detached autoresearch.py + live PR-updating progress chart."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Charlene Leong", email = "charleneleong84@gmail.com" }]
keywords = [
    "autoresearch",
    "experiment-tracking",
    "hyperparameter-sweep",
    "research-workflow",
    "ml-research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "plotly>=5.20",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pr = ["requests>=2.31"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/charleneleong-ai/autoresearch"
Issues = "https://github.com/charleneleong-ai/autoresearch/issues"

[project.scripts]
autoresearch-pr-updater = "autoresearch.pr_updater:main"
autoresearch-current-run = "autoresearch.current_run:main"
autoresearch-render = "autoresearch.render:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoresearch"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
