[project]
name = "autoresearch"
version = "0.19.2"
description = "Self-driving experiment sweep loop — daemon-detached autoresearch.py + live PR-updating progress chart."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Charlene Leong", email = "charleneleong84@gmail.com" }]
keywords = [
    "autoresearch",
    "experiment-tracking",
    "hyperparameter-sweep",
    "research-workflow",
    "ml-research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "plotly>=5.20",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "rich>=13",
    "typer>=0.12",
]

[project.optional-dependencies]
pr = ["requests>=2.31"]
# `[wandb]` extra: enables the `gradient_collapse` retrospective detector
# (and any future detectors that need to read training-time series). Lazy-
# imported in autoresearch.wandb_history; without the extra, the detector
# silently no-ops instead of crashing.
wandb = ["wandb>=0.17"]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "commitizen>=4.0",
    "build>=1.0",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/charleneleong-ai/autoresearch"
Issues = "https://github.com/charleneleong-ai/autoresearch/issues"

[project.scripts]
autoresearch-pr-updater = "autoresearch.pr_updater:cli"
autoresearch-current-run = "autoresearch.current_run:cli"
autoresearch-render = "autoresearch.render:cli"
autoresearch-report = "autoresearch.report:app"
autoresearch-verdict = "autoresearch.verdict:app"
autoresearch-compare = "autoresearch.compare:cli"
autoresearch-retrospective = "autoresearch.retrospective:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoresearch"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# typer's API requires `typer.Option(...)` calls in argument defaults — that's
# how it discovers CLI flags. Disable B008 globally; it's a known false positive
# for typer / fastapi / similar dependency-injection-style APIs.
ignore = ["B008"]

# ── Commitizen — conventional-commit-driven releases ──────────────────
# Bump versions + update CHANGELOG.md + tag with one command:
#   cz bump --increment patch        # 0.0.2 → 0.0.3
#   cz bump --increment minor        # 0.0.2 → 0.1.0
#   cz bump                          # auto-detect from commits since last tag
# Then `git push --follow-tags` fires .github/workflows/release.yml.
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.19.2"
version_files = [
    "pyproject.toml:^version",
    "src/autoresearch/__init__.py:^__version__",
    "README.md:badge/version-v",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
# Major-version-zero: in 0.x.y, breaking changes bump minor (not major).
# Drop this flag once we hit 1.0.0.
major_version_zero = true
